update logs and other

--- a/README
+++ b/README
@@ -273,6 +273,9 @@ Reporting Problems:
 Report problems you encounter by sending E-mail to
 ooh323c-devel@lists.sourceforge.net.
 
+The ooh323c problem newsgroup can be found at
+http://www.sourceforge.net/projects/ooh323c
+
 If you have any further questions or comments on what you would like to
 see in the product or what is difficult to use or understand, please
 communicate them to us. Your feedback is important to us. Please let us
