--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-CVS version:
+Release 0.8.3
 1. Added MediaWaitForConnect configuration option (Thanks to Tim King,
         for solving PSTN call ring problem)
 2. Changed CallingPartyNumber IE to disable the CLI screening. (Thanks to
