--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 CVS
-No current changes.
+1. Fixed version number. (thanks to Matej Kral)
+2. Increased maximum message buffer size to avoid segmentation faults.
+   (thanks to Matej Kral)
+3. Fixed a bug preventing the stack from being restarted. (thanks to Matej
+   Kral)
+4. Call monitors can now be stopped even if the stack is not registered with
+   the GateKeeper.  (thanks to Matej Kral)
 
 Release 0.8.4
 1. Updated log information for "H.225 Information" message
